--- a/index.html
+++ b/index.html
@@ -39,11 +39,9 @@
       <hr>
       <p>Het maken van deze website is het praktische deel van het PWS van Iris van der Zwart op het Emmauscollege Rotterdam.</p>
       <p>
-      This page counts
       <a href="https://www.freecounterstat.com" title="website hit counter"><img src="https://counter9.stat.ovh/private/freecounterstat.php?c=s64xhtlqs6x6lh6ypraz7esnprnmfrf8" border="0" title="website hit counter" alt="website hit counter"></a>
       page views and         
-      <!-- hitwebcounter Code START -->
-      <a href="https://www.hitwebcounter.com" target="_blank"><img src="https://hitwebcounter.com/counter/counter.php?page=8002655&style=0001&nbdigits=5&type=ip&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>                                    
+      <a href="https://www.freecounterstat.com" title="website counter"><img src="https://counter9.stat.ovh/private/freecounterstat.php?c=kq4luj9jx43lryjr277sa8n85wp96twb" border="0" title="website counter" alt="website counter"></a>
       unique visitors since July 13 2022.    
       </p>                                        
     </footer>
