--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
       <hr>
       <p>Het maken van deze website is het praktische deel van het PWS van Iris van der Zwart op het Emmauscollege Rotterdam.</p>
       <p>
+      <!-- page views -->
       <a href="https://www.freecounterstat.com" title="website hit counter"><img src="https://counter9.stat.ovh/private/freecounterstat.php?c=s64xhtlqs6x6lh6ypraz7esnprnmfrf8" border="0" title="website hit counter" alt="website hit counter"></a>
-      page views and         
-      <a href="https://www.freecounterstat.com" title="website counter"><img src="https://counter9.stat.ovh/private/freecounterstat.php?c=kq4luj9jx43lryjr277sa8n85wp96twb" border="0" title="website counter" alt="website counter"></a>
-      unique visitors since July 13 2022.    
+      bezoeken sinds 13 juni 2022.         
+      <!-- unique visitors, but this number seems to be to high and to to close to the number of page views
+        <a href="https://www.freecounterstat.com" title="website counter"><img src="https://counter9.stat.ovh/private/freecounterstat.php?c=kq4luj9jx43lryjr277sa8n85wp96twb" border="0" title="website counter" alt="website counter"></a>
+      -->
       </p>                                        
     </footer>
   </main>
